Fix issue with triggering EventSaveSettings from another Thread